MAINT: More example cleanup.

--- a/examples/ExampleView.ipynb
+++ b/examples/ExampleView.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:145674ec4dbe257e0af251646c8583a8b4fa0ff8c755d3a2668f4ac91d979e7a"
+  "signature": "sha256:129bb6a777b616662cf79362e0b04bee822bad3ac9647941c941a7edaa619e8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -99,6 +99,66 @@
       "        columns=df1.columns,\n",
       "        index=np.hstack(\n",
       "            [\n",
+      "                 df1.index.values,\n",
+      "                    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import cProfile\n",
+      "\n",
+      "import pandas as pd\n",
+      "import numpy as np\n",
+      "\n",
+      "def concat_dataframes():\n",
+      "    \"\"\"Slow\"\"\"\n",
+      "    for i in range(1000):\n",
+      "    df1 = pd.DataFrame(\n",
+      "        np.random.randn(1000, 26),\n",
+      "        columns=[chr(ord('A') + i) for i in range(26)],\n",
+      "        index=range(1000),\n",
+      "    )\n",
+      "\n",
+      "    df2 = pd.DataFrame(\n",
+      "        np.random.randn(1000, 26),\n",
+      "        columns=[chr(ord('A') + i) for i in range(26)],\n",
+      "        index=range(1000, 2000),\n",
+      "    )\n",
+      "\n",
+      "    return pd.concat([df1, df2])\n",
+      "\n",
+      "cProfile.runctx(\n",
+      "    'concat_dataframes()',\n",
+      "    globals(),\n",
+      "    locals(),\n",
+      "    'naive.stats',\n",
+      ")\n",
+      "\n",
+      "def concat_dataframes():\n",
+      "    \"\"\"Fast\"\"\"\n",
+      "\n",
+      "    df1 = pd.DataFrame(\n",
+      "        np.random.randn(1000, 26),\n",
+      "        columns=[chr(ord('A') + i) for i in range(26)],\n",
+      "        index=np.arange(1000),\n",
+      "    )\n",
+      "\n",
+      "    df2 = pd.DataFrame(\n",
+      "        np.random.randn(1000, 26),\n",
+      "        columns=[chr(ord('A') + i) for i in range(26)],\n",
+      "        index=np.arange(1000, 2000),\n",
+      "    )\n",
+      "\n",
+      "    return pd.DataFrame(\n",
+      "        np.vstack([df1.values, df2.values]),\n",
+      "        columns=df1.columns,\n",
+      "        index=np.hstack(\n",
+      "            [\n",
       "             \tdf1.index.values,\n",
       "                df2.index.values,\n",
       "            ],\n",
@@ -114,8 +174,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "ename": "IndentationError",
+       "evalue": "expected an indented block (<ipython-input-7-81d427e23b73>, line 9)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-81d427e23b73>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    df1 = pd.DataFrame(\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
